--- a/docs/11_technical_risks.adoc
+++ b/docs/11_technical_risks.adoc
@@ -1,17 +1,27 @@
 [[section-technical-risks]]
 == Risks and Technical Debts
 
-
-[role="arc42help"]
 ****
-.Contents
-A list of identified technical risks or technical debts, ordered by priority
+.Risks
+|===
+|Risks |Considerations
 
-.Motivation
-“Risk management is project management for grown-ups” (Tim Lister, Atlantic Systems Guild.) 
+|Time for doing the project due to other courses
+|A good organization may solve this risk
 
-This should be your motto for systematic detection and evaluation of risks and technical debts in the architecture, which will be needed by management stakeholders (e.g. project managers, product owners) as part of the overall risk analysis and measurement planning.
+|===
 
-.Form
-List of risks and/or technical debts, probably including suggested measures to minimize, mitigate or avoid risks or reduce technical debts.
+.Technical Debts
+|===
+|Technical Debts | Considerations
+
+|The usage of TypeScript and React
+|The team is not familiarized with the language so we may need to make own learning
+
+|This may be one of the biggest projects that we have faced
+|Collaboration and communication among the team will be crucial
+
+|===
+
+
 ****
