--- a/docs/08_concepts.adoc
+++ b/docs/08_concepts.adoc
@@ -52,7 +52,7 @@ image:08-Crosscutting-Concepts-Structure-EN.png["Possible topics for crosscuttin
 
 === Domain model
 
-image:UmlDiagram.png["Example UML Diagram"]
+image:Clase-UML.png["UML Diagram"]
 
 
 
