--- a/docs/04_solution_strategy.adoc
+++ b/docs/04_solution_strategy.adoc
@@ -29,15 +29,11 @@ The technologies we have decided to use for the development of the app are:
 
 Bootstrap → In order to avoid as much as possible the development of CSS we chose to use Bootstrap.
 
-MySQL → Since we are familiar to relational databases, we plan to use an instance of MySQL database.
-
-Azure → To deploy the web app we have decided to use Azure, since with the University account we have 100$ bonus. A member of the team took a course on Azure basics this summer and used it for the subject SEW.
-
-Oracle Server → In order to deploy the database, we decided to use a cloud server from Oracle (not an oracle database). As students, Oracle offer free-for-lifetime virtual machine in the cloud.
-
 CryptoJS → The crypto-js library provides AES and some hashing such as MD5/SHA in order to encrypt passwords, so we can save them encrypted in the database.
 
-Inrupt → Main POD server provider. Widely used.
+Solid Community → Main POD server provider. Widely used.
+
+Firebase → Is a tool for the deployment and development of the application and also it provides a part for the backend and a database.
 
 React and TypeScript have not been included in the list since it is compulsory to use them, and are not "a decision" itself.
 
