Update in doc8 ( Mark class diagram )

--- a/docs/08_concepts.adoc
+++ b/docs/08_concepts.adoc
@@ -50,7 +50,7 @@ image:08-Crosscutting-Concepts-Structure-EN.png["Possible topics for crosscuttin
 ****
 
 
-=== Domain model
+=== Domain model - Simple Class Diagram
 
 image:Clase-UML.png["UML Diagram"]
 
