--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -36,8 +36,8 @@ Needless to say, every time the app needs user's location, the user should provi
 
 ==== Technical Deployment
 
-DeDe will be implemented using TypeScript with React framework, and data will be stored in an instance of MySQL database.
-The web service and deployment will be provided by Azure, since it provides 100$ bonus for students and a set of diagnosis tools to test loads and web performance.
+DeDe will be implemented using TypeScript with React framework, and data will be stored in a Firebase database.
+The web service and deployment will also be provided by Firebase, since it provides 300$ bonus for students and a set of diagnosis tools to test loads and web performance.
 
 [role="arc42help"]
 ****
